# netconsole

./: .env  .env.example  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  README.vi.md  docker-compose.override.yml  docker-compose.yml  lab-guide-vi.md  lab-guide.md  release-notes.md
.github/: pull_request_template.md
.github/workflows/: test.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: logging_config.py  main.py  models.py  vendor.py
backend/app/alembic/versions/: 65f8c8c47fe3_add_switch_model.py  8c234143cdb3_add_apikey_allowed_ips.py  a3f1b2c4d5e6_add_social_login_and_passkey.py  a7b8c9d0e1f2_add_apikey_role_and_service_account.py  b4c5d6e7f8a9_add_password_login_enabled.py  c1d2e3f4a5b6_add_auditlog_table.py  d1e2f3a4b5c6_add_enable_password_to_credential.py  e2f3a4b5c6d7_add_health_status_to_switch.py  f0418d9eea16_add_credentials_model.py  f4a5b6c7d8e9_add_apikey_table.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: api_keys.py  arps.py  credentials.py  group_config.py  groups.py  interfaces.py  ip_interfaces.py  items.py  login.py  logs.py  mac_addresses.py  oauth.py  passkey.py  switches.py  users.py  utils.py
backend/app/automation/: config.yaml  group_config.py  health.py  interfaces.py  switch_config.py  switches.py  switches2.py
backend/app/automation/inventory/: defaults.yaml  groups.yaml  hosts.yaml
backend/app/core/: config.py  crypto.py  db.py  scheduler.py
backend/app/crud/: __init__.py  api_keys.py  arps.py  audit.py  create_nornir.py  credentials.py  group_config.py  groups.py  interfaces.py  ip_interfaces.py  mac_addresses.py  oauth.py  switch_config.py  switches.py  users.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_api_keys.py  test_arps.py  test_credentials.py  test_groups.py  test_ip_interfaces.py  test_logs.py  test_mac_addresses.py  test_switches.py  test_users.py
backend/app/tests/crud/: test_api_keys.py
backend/app/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/scripts/: cron_update_running_config.py
frontend/: Dockerfile  biome.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  utils.ts
frontend/src/client/: models.ts  schemas.ts  services.ts
frontend/src/components/Admin/: EditUser.tsx
frontend/src/components/ApiKeys/: AddApiKey.tsx  EditApiKey.tsx  IntegrationGuide.tsx
frontend/src/components/Auth/: PasskeyLogin.tsx
frontend/src/components/Common/: ActionsMenu.tsx  ActionsMenuInterface.tsx  CidrInput.tsx  DeleteAlert.tsx  Navbar.tsx  Sidebar.tsx  SidebarItems.tsx
frontend/src/components/Credentials/: AddCredential.tsx  EditCredential.tsx
frontend/src/components/Groups/: AddGroup.tsx  EditGroup.tsx
frontend/src/components/Interfaces/: AddInterface.tsx  EditInterface.tsx
frontend/src/components/Switches/: AddSwitch.tsx  EditSwitch.tsx  PushSwitchConfig.tsx
frontend/src/components/UserSettings/: PasskeyManager.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: _layout.tsx  login.tsx  oauth-callback.tsx
frontend/src/routes/_layout/: admin.tsx  arps.tsx  credentials.tsx  group_config.tsx  groups.tsx  keys.tsx  (+8 more)
mcp_server/: .env.example  README.md  pyproject.toml
mcp_server/netconsole_mcp/: __main__.py  client.py  config.py  server.py
mcp_server/netconsole_mcp/tools/: arps.py  credentials.py  group_config.py  groups.py  interfaces.py  ip_interfaces.py  logs.py  mac_addresses.py  switches.py
