[tool.poetry]
name = "app"
version = "0.2.5"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.47.0"}
fastapi = "^0.136.0"
python-multipart = "^0.0.31"
email-validator = "^2.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^9.1.0"
pydantic = ">2.0"
emails = "^0.6"

gunicorn = "^22.0.0"
jinja2 = "^3.1.6"
alembic = "^1.18.0"
httpx = "^0.28.0"
psycopg = {extras = ["binary"], version = "^3.3.0"}
sqlmodel = "^0.0.38"
# Pin bcrypt until passlib supports the latest
bcrypt = "4.0.1"
pydantic-settings = "^2.14.2"
sentry-sdk = {extras = ["fastapi"], version = "^2.53.0"}
pyjwt = "^2.13.0"

napalm= "^5.1.0"
ncclient="^0.6.15"
netaddr="^1.2.1"
netmiko="^4.6.0"
netutils="^1.8.1"
nornir="^3.5.0"
nornir_ansible="^2023.12.28"
nornir-netbox="^0.3.0"
nornir-netmiko="^1.0.1"
nornir-utils="^0.2.0"
nornir_napalm="^0.5.0"
ntc_templates="^5.0.0"
paramiko="^3.4.0"
pyproject-toml = "^0.0.10"
cryptography = "^48.0.0"
authlib = "^1.7.0"
itsdangerous = "^2.2.0"
webauthn = "^2.7.0"
apscheduler = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
mypy = "^1.9.0"
ruff = "^0.15.0"
pre-commit = "^3.6.2"
types-passlib = "^1.7.7.20240106"
coverage = "^7.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[[tool.mypy.overrides]]
module = [
    "app.crud.switches",
    "app.crud.interfaces",
    "app.crud.arps",
    "app.crud.mac_addresses",
    "app.crud.ip_interfaces",
    "app.crud.groups",
    "app.crud.credentials",
    "app.crud.create_nornir",
    "app.crud.group_config",
    "app.automation.*",
]
# SQLModel column typing and nornir stubs have pre-existing issues resolved separately
ignore_errors = true

[[tool.mypy.overrides]]
module = ["app.tests.*"]
# Test helpers reference crud.* via wildcard import; resolve with full type coverage later
ignore_errors = true

[[tool.mypy.overrides]]
module = ["authlib.*", "nornir_netmiko.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "ARG001",  # FastAPI dependency injection args appear unused to static analysis
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
