[project]
name = "netconsole-mcp"
version = "0.1.0"
description = "MCP server exposing NetConsole's REST API as tools for AI agents"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.14.2",
]

[project.scripts]
netconsole-mcp = "netconsole_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["netconsole_mcp"]
